Update the version to 0.3.7.